8344821: Test CheckDefaultArchiveFile.java fails if classes_coh.jsa is not present